<!--
  ~ Copyright 2019 Travlog. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_username_or_email_address">Username or email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_title">Title</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="close">close</string>
    <string name="done">Done</string>
    <string name="my_page">My page</string>
    <string name="username">Username</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="hint_email">Email</string>
    <string name="delete">Delete</string>
    <string name="add_travlog">Add travlog</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add_destination">Add destination</string>
    <string name="hint_where_to">Where to?</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="or">or</string>
    <string name="note_date">%1$s - %2$s</string>
    <string name="memo">memo</string>
    <string name="add_place">Add place</string>
</resources>
