<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:backgroundTint="@android:color/white"
            app:rippleColor="@color/accent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:backgroundTint="@android:color/white"
            app:rippleColor="@color/accent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_page"
            app:backgroundTint="@android:color/white"
            app:rippleColor="@color/accent" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>